# esp32-rust-bad-apple

./: .gitattributes
esp-client/: Cargo.toml
esp-client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  main_old.rs
