[package]
name = "esp-client"
version = "0.1.0"
authors = ["Krapoviche <63341122+Krapoviche@users.noreply.github.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = { version = "0.40.1"}
esp-idf-svc = { version = "0.45.0"}
embedded-svc = "0.24.0"
embedded-graphics = "0.7.1"
ssd1306           = "0.7.1"
anyhow = { version = "1" }

[build-dependencies]
embuild = "0.31.1"
rand = "0.8.5"


